--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* ------------------------------------------------------------------------------------
+  Bismillah Deadline Hari ini KUDU JAADIIIIIIIIIIIIII
+  --------------------------------------------------------------------------------------- */
+
 :root {
 	--lightgray: #efefef;
 	--blue: steelblue;
@@ -18,9 +22,7 @@
 }
 
 /* ------------------------------------------------------------------------------------
-  
   Envelope styling
-  
   --------------------------------------------------------------------------------------- */
 
 .container {
@@ -238,11 +240,7 @@
 	z-index: -1;
 }
 
-/* ------------------------------------------------------------------------------------
-  
-  Letter styling
-  
-  --------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------Letter styling --------------------------------------------------------------------------------------- */
 
 .modal {
 	position: fixed;
@@ -319,11 +317,7 @@
 	display: none;
 }
 
-/* ------------------------------------------------------------------------------------
-  
-  Game styling
-  
-  --------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------ opening sama loadingnya --------------------------------------------------------------------------------------- */
 
 body {
 	display: flex;
@@ -563,11 +557,7 @@ body .game_intro .dialogue label:hover {
 	background: #66bf60;
 }
 
-/* ------------------------------------------------------------------------------------
-  
-  Animation
-  
-  --------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------ Animasinya --------------------------------------------------------------------------------------- */
 
 @keyframes up {
 	0%,
